refactor(big_update): downgrade to java 11