@@ -2,7 +2,6 @@ package tp.software.traceability.services.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import tp.software.traceability.exceptions.ProductServiceException;
@@ -13,12 +12,11 @@ import tp.software.traceability.shared.dto.ProductDto;
 import tp.software.traceability.shared.utils.GenerateUtils;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
-public class ProductServiceImpl implements ProductService {
-
-    private static final Logger LOGGER = org.slf4j.LoggerFactory.getLogger(ProductServiceImpl.class);
+public class  ProductServiceImpl implements ProductService {
 
     private final ProductRepository productRepository;
 
@@ -27,21 +25,17 @@ public class ProductServiceImpl implements ProductService {
     @Override
     public List<ProductDto> getAllProducts() {
         ModelMapper modelMapper = new ModelMapper();
-        LOGGER.info("Getting all products");
         return productRepository.findAll().stream()
                 .map(productEntity -> modelMapper.map(productEntity, ProductDto.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public ProductDto getProductById(Long id) {
         ModelMapper modelMapper = new ModelMapper();
-        LOGGER.info("Getting product by id: {}", id);
         ProductEntity productEntity = productRepository.findById(id).orElseThrow(() -> {
-            LOGGER.error("Product with id: {} not found", id);
             throw new ProductServiceException("Product not found");
         });
-        LOGGER.info("Product with id: {} found", id);
         return modelMapper.map(productEntity, ProductDto.class);
     }
 
@@ -50,36 +44,28 @@ public class ProductServiceImpl implements ProductService {
         ModelMapper modelMapper = new ModelMapper();
         ProductEntity productEntity = modelMapper.map(productDto, ProductEntity.class);
         productEntity.setId(generateUtils.generateNumericProductId(10));
-        LOGGER.info("Creating product with id: {}", productEntity.getId());
         ProductEntity savedProduct = productRepository.save(productEntity);
-        LOGGER.info("Product with id: {} created", savedProduct.getId());
         return modelMapper.map(savedProduct, ProductDto.class);
     }
 
     @Override
     public ProductDto updateProduct(Long id, ProductDto productDto) {
         ModelMapper modelMapper = new ModelMapper();
-        LOGGER.info("Updating product with id: {}", id);
         ProductEntity productEntity = productRepository.findById(id).orElseThrow(() -> {
-            LOGGER.error("Product with id: {} not found", id);
             throw new ProductServiceException("Product not found");
         });
         productEntity.setName(productDto.getName());
         productEntity.setPrice(productDto.getPrice());
         productEntity.setExpirationDate(productDto.getExpirationDate());
         ProductEntity updatedProduct = productRepository.save(productEntity);
-        LOGGER.info("Product with id: {} updated", updatedProduct.getId());
         return modelMapper.map(updatedProduct, ProductDto.class);
     }
 
     @Override
     public void deleteProduct(Long id) {
-        LOGGER.info("Deleting product with id: {}", id);
         ProductEntity productEntity = productRepository.findById(id).orElseThrow(() -> {
-            LOGGER.error("Product with id: {} not found", id);
             throw new ProductServiceException("Product not found");
         });
         productRepository.delete(productEntity);
-        LOGGER.info("Product with id: {} deleted", id);
     }
 }
